--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conceptos basicos</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Conceptos basicos</title>    
 </head>
 <body>
-    <script src="js/1productos.js"></script>
+    <script src="js/prueba.js"></script>
 </body>
 </html>
