--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina con pruebas js"/>
+    <meta name="keywords" content="js, ayuda con js, ejercitacion, objetos"/>
     <link rel="stylesheet" href="./css/style.css">
     <title>Conceptos basicos</title>    
 </head>
