--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="Pagina con pruebas js"/>
     <meta name="keywords" content="js, ayuda con js, ejercitacion, objetos"/>
     <link rel="stylesheet" href="./css/style.css">
-    <title>Conceptos basicos</title>    
+    <title>EjerciciosJS - POO</title>    
 </head>
 <body>
-    <script src="js/prueba.js"></script>
+    <script src="js/1productos.js"></script>
 </body>
 </html>
