--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>EjerciciosJS - POO</title>    
 </head>
 <body>
-    <script src="js/1productos.js"></script>
+    <script src="js/ej6.js"></script>
 </body>
 </html>
